package pt.ipp.isep.dei.esoft.project.domain;

import java.util.ArrayList;

public class Collaborator {
    private String name;
    private int phone;
    private String birthdate;
    private String admissionDate;
    private String address;
    private int idDocumentNumber;
    private Job job;
    private ArrayList<Skill> skills;
}
