package pt.ipp.isep.dei.esoft.project.domain;

import java.util.ArrayList;

public class Team {
    private int maxSize;
    private int minSize;
    private ArrayList<Skill> requiredSkills;
    private ArrayList<Collaborator> collaborators;
}
