@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false


skinparam classAttributeIconSize 0

hide circle
hide methods

class HRM {

}

class SystemUser {
    name
    email
    password
    phone

}

class Collaborator {
    birthdate
    admissionDate
    address
    idDocType
    idNumber
}

class TeamProposal {
}

class Team {
minimumSize
maximumSize

}

class Skill {
    name
}

HRM "1 " - "*" Collaborator : creates >
HRM "1" - "1  " TeamProposal : requests >
TeamProposal "1 " - "1" Team: has >
Team "1  " -- "1..*                  " Collaborator: has >
Collaborator "1 " - "0..* " Skill : has >
SystemUser <|- HRM
SystemUser <|-- Collaborator

@enduml
